refactor(系统设置): 组织用户组功能